user-records-search: fix status icon alignment

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/theme.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/theme.less
@@ -274,6 +274,7 @@ body {
 // Deposits page
 
 .item.deposits-list-item {
+
   .ui.grid .checkbox-column {
     display: flex;
     align-items: center;
@@ -282,6 +283,11 @@ body {
       padding-left: 0.5em;
       padding-bottom: 20px;
     }
+
+  }
+
+  div.status-icon {
+    margin-right: 10px;
   }
 
   .actions > a,
